# rewoo-agent

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  env.example  pyproject.toml  requirements.txt  run_dev.py  start.sh
examples/: custom_tool_example.py  simple_example.py  streaming_example.py
src/: __init__.py  main.py
src/config/: settings.py
src/core/: __init__.py  app.py  exception_handler.py
src/helpers/: log_factory.py
src/models/: __init__.py  plan.py  schemas.py  task.py
src/rewoo_agent/: __init__.py
src/rewoo_agent/controllers/: __init__.py  agent_routers.py
src/rewoo_agent/services/: __init__.py  executor.py  planner.py  redis_service.py  rewoo_service.py
src/rewoo_agent/tools/: __init__.py  base.py  calculator.py  search.py  wikipedia.py
tests/: test_tools.py
web/: .env.example  README.md  index.html  package-lock.json  package.json  start_web.sh  tailwind.config.cjs
web/src/: App.jsx  index.css
web/src/components/: ChatInput.jsx  ChatInterface.jsx  ExampleQueries.jsx  LanguageSelector.jsx  ProgressBar.jsx  StreamingChat.jsx  TaskStatus.jsx
web/src/config/: api.js
web/src/context/: LanguageContext.jsx
web/src/hooks/: useTranslation.js
web/src/locales/: en.json  index.js  jp.json  vi.json
