[project]
name = "rewoo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.100.0",
    "httpx>=0.25.0",
    "langchain>=0.1.0",
    "langchain-google-genai>=2.1.12",
    "langchain-openai>=0.1.0",
    "langgraph>=0.1.0",
    "loguru>=0.7.3",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.10.1",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "python-dotenv>=1.0.0",
    "redis>=6.4.0",
    "requests>=2.31.0",
    "uvicorn>=0.23.0",
    "wikipedia>=1.4.0",
]
